fix: native scrollbar at mobile

--- a/src/components/styles/CategoryTabs.module.css
+++ b/src/components/styles/CategoryTabs.module.css
@@ -1,6 +1,5 @@
 .CategoryTabs {
   @apply flex flex-row overflow-hidden;
-  
 }
 
 .CategoryTabs .tabList {
@@ -8,7 +7,7 @@
 }
 
 .CategoryTabs .tabList::-webkit-scrollbar {
-  @apply h-2;
+  @apply sm:h-2;
 }
 
 .CategoryTabs .tabItem {
