--- a/src/index.css
+++ b/src/index.css
@@ -5,22 +5,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 *::-webkit-scrollbar {
-  @apply rounded-md w-2 h-2;
+  @apply sm:rounded-md sm:w-2 sm:h-2;
 }
 
 *::-webkit-scrollbar-track {
-  @apply rounded-md;
-  background: #f1f1f1;
+  @apply sm:rounded-md sm:bg-slate-100;
 }
 
 /* Handle */
 *::-webkit-scrollbar-thumb {
-  @apply bg-slate-300 rounded-md;
+  @apply sm:bg-slate-300 sm:rounded-md;
 }
 
 /* Handle on hover */
 *::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  @apply sm:bg-slate-700;
 }
 
 html {
